force-app/main/default/objects/noduplicates__Test_Obj1__c/noduplicates__Test_Obj1__c.object-meta.xml
<CustomObject>
    <label>Test Obj1</label>
    <nameField>
        <displayFormat>T1-{000000}</displayFormat>
        <label>Test Obj1 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Obj1</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>