force-app/main/default/objects/noduplicates__Test_Obj1__c/fields/noduplicates__Date__c.field-meta.xml
<CustomField>
    <fullName>noduplicates__Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>