force-app/main/default/objects/noduplicates__Test_Obj1__c/fields/noduplicates__Encrypted__c.field-meta.xml
<CustomField>
    <fullName>noduplicates__Encrypted__c</fullName>
    <label>Encrypted</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>