force-app/main/default/objects/noduplicates__Test_Obj1__c/fields/noduplicates__First_Name__c.field-meta.xml
<CustomField>
    <fullName>noduplicates__First_Name__c</fullName>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>