force-app/main/default/objects/noduplicates__Test_Obj1__c/fields/noduplicates__Number__c.field-meta.xml
<CustomField>
    <fullName>noduplicates__Number__c</fullName>
    <label>Number</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>