force-app/main/default/objects/noduplicates__Test_Obj1__c/fields/noduplicates__URL__c.field-meta.xml
<CustomField>
    <fullName>noduplicates__URL__c</fullName>
    <label>URL</label>
    <type>Url</type>
</CustomField>