force-app/main/default/objects/noduplicates__Test_Obj1__c/fields/noduplicates__Zip__c.field-meta.xml
<CustomField>
    <fullName>noduplicates__Zip__c</fullName>
    <label>Zip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>