force-app/main/default/objects/noduplicates__Test_Obj1__c/recordTypes/noduplicates__First.recordType-meta.xml
<RecordType>
    <fullName>noduplicates__First</fullName>
    <active>true</active>
    <label>First</label>
</RecordType>