force-app/main/default/objects/noduplicates__Test_Obj1__c/recordTypes/noduplicates__Second.recordType-meta.xml
<RecordType>
    <fullName>noduplicates__Second</fullName>
    <active>true</active>
    <label>Second</label>
</RecordType>