force-app/main/default/objects/noduplicates__Test_Obj1__c/listViews/noduplicates__All.listView-meta.xml
<ListView>
    <fullName>noduplicates__All</fullName>
    <columns>NAME</columns>
    <columns>noduplicates__First_Name__c</columns>
    <columns>noduplicates__Last_Name__c</columns>
    <columns>noduplicates__Company__c</columns>
    <columns>noduplicates__Phone__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>noduplicates__Street__c</columns>
    <columns>noduplicates__TextAreaRich__c</columns>
    <columns>noduplicates__Zip__c</columns>
    <columns>noduplicates__URL__c</columns>
    <columns>noduplicates__Time__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>noduplicates__Checkbox__c</columns>
    <columns>noduplicates__Encrypted__c</columns>
    <columns>noduplicates__Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>9/1/2021 12:00 AM</value>
    </filters>
    <label>All</label>
</ListView>